# mite_schema

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish_pypi.yml
mite_schema/: __init__.py  main.py
mite_schema/schema/: entry.json
mite_schema/schema/definitions/: changelog.json  citation.json  enzyme.json  reactions.json
mite_schema/schema_manager/: schema_manager.py
modern_python/: main.py
tests/: test_main.py  test_main_cli.py  test_schema_manager.py
tests/example_files/: example_valid.json
