[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mite_schema"
version = "0.9.0"
description = "Containing the Minimum Information about a Tailoring Enzymes schema and auxiliary methods"
readme = "README.md"
requires-python = ">=3.12"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Mitja M. Zdouc", email = "mmzdouc@gmail.com" }
]

dependencies = [
    "argparse~=1.4",
    "coloredlogs~=15.0",
    "jsonschema~=4.23",
    "pydantic~=2.8",
    "referencing~=0.35",
]

[project.scripts]
mite_schema = "mite_schema.main:main"

[project.optional-dependencies]
dev = [
    "pre-commit~=3.4",
    "pytest~=7.4",
    "ruff~=0.5"
]

[tool.hatch.envs.dev]
features = [
    "dev"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  "mite_schema"
]

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-eradicate/eradicate
    "ERA",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-pie
    "PIE",
    # pygrep
    "PGH",
    # ruff checks
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-tidy-imports
    "TID",
    # pyupgrade
    "UP",
]
ignore = [
    # whitespace-before-punctuation
    "E203",
    # percent-format-invalid-format
    "E501",
    # mixed-case-variable-in-class-scope
    "N815"
]