[project]
name = "mite_schema"
version = "1.8.4"
description = "Containing the Minimum Information about a Tailoring Enzymes data standard schema and auxiliary methods"
readme = "README.md"
requires-python = ">=3.11"
license-files = ["LICENSE"]
authors = [{ name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" }]
keywords = ["cheminformatics", "genomics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry"
]
dependencies = [
  "coloredlogs~=15.0",
  "jsonschema~=4.25",
  "pydantic~=2.11",
]

[project.urls]
Discussions = "https://github.com/orgs/mite-standard/discussions/3"
Homepage = "https://github.com/mite-standard/mite_schema"
Issues = "https://github.com/mite-standard/mite_schema/issues"
Website = "https://mite.bioinformatics.nl/"

[project.scripts]
mite_schema = "mite_schema.main:main"

[dependency-groups]
dev = ["pre-commit~=4.3", "pytest~=8.4", "ruff~=0.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.dev]
features = ["dev"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.idea/",
  "/.github/",
  "/.git/",
  "/.pytest_cache/",
  "/.ruff_cache/",
  "/.venv",
  "/tests/",
  "/.gitignore",
  "/.pre-commit-config.yaml",
  "/CODE_OF_CONDUCT.md",
  "/CONTRIBUTING.md"
]

[tool.hatch.build.targets.wheel]
packages = ["mite_schema"]

[tool.ruff.lint]
select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # flake8-eradicate/eradicate
  "ERA",
  # isort
  "I",
  # pep8-naming
  "N",
  # flake8-pie
  "PIE",
  # pygrep
  "PGH",
  # ruff checks
  "RUF",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP",
]
ignore = [
  # whitespace-before-punctuation
  "E203",
  # percent-format-invalid-format
  "E501",
  # mixed-case-variable-in-class-scope
  "N815"
]
