[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "mite_schema"
module-root = ""

[project]
name = "mite_schema"
version = "1.8.5"
description = "Containing the Minimum Information about a Tailoring Enzymes data standard schema and auxiliary methods"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [
    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" }
]
keywords = [
    "cheminformatics",
    "genomics"
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry"
]
dependencies = [
    "argparse~=1.4",
    "coloredlogs~=15.0",
    "jsonschema~=4.25",
    "pydantic~=2.11",
]

[project.urls]
Website = "https://mite.bioinformatics.nl/"
Homepage = "https://github.com/mite-standard/mite_schema"
Issues = "https://github.com/mite-standard/mite_schema/issues"
Discussions = "https://github.com/orgs/mite-standard/discussions/3"

[project.scripts]
mite_schema = "mite_schema.main:main"

[project.optional-dependencies]
dev = [
    "pre-commit~=4.3",
    "pytest~=8.4",
    "ruff~=0.13"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  "mite_schema"
]

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-eradicate/eradicate
    "ERA",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-pie
    "PIE",
    # pygrep
    "PGH",
    # ruff checks
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-tidy-imports
    "TID",
    # pyupgrade
    "UP",
]
ignore = [
    # whitespace-before-punctuation
    "E203",
    # percent-format-invalid-format
    "E501",
    # mixed-case-variable-in-class-scope
    "N815"
]
